@@ -2,7 +2,9 @@
  - Radical rework of prepared statements; INCOMPATIBLE INTERFACE CHANGE!
  - Dropped support for g++ 2.95
  - Emulate prepared statements support on old libpq or old backend
- - Fixed missing tutorial (release script now tests for this)
+ - Bug fix: missing tutorial (release script now tests for this)
+ - Automatically links in socket library on Windows or Solaris, if needed
+ - Bug fix: check for std namespace didn't work
 2.6.2
  - Bug fix: connection state was not set up properly in some common cases
  - Bug fix: headers were installed in "include" instead of "include/pqxx"
