@@ -2,7 +2,7 @@ libpqxx (2.6.3-1) unstable; urgency=medium
 
   * New upstream release.
 
- -- Jeroen T. Vermeulen <jtv@xs4all.nl>  Sun, 08 Jan 2006 00:40:00 +0700
+ -- Jeroen T. Vermeulen <jtv@xs4all.nl>  Sat, 11 Feb 2006 15:40:00 +0700
 
 libpqxx (2.6.2-1) unstable; urgency=medium
 
